# pensieve

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.bench  README.md
.agents/rules/: coding-principles.md
.github/workflows/: ci.yml  code-quality.yml  coverage.yml  docker-publish.yml
benchmark_results/: benchmark-host-net.txt  benchmark-results.txt
deploy/: README.md  client.py  consolidate.py  docker-compose.3-node.yml  docker-compose.5-node.yml  docker-compose.bench-bridge.yml  docker-compose.bench-host.yml  docker-compose.bench.yml
docs/: architecture.md  deployment.md  epics.md  wire-protocol.md
src/: main.cpp
src/common/: result.h  types.h
src/coordinator/: coordinator.cpp  coordinator.h  peer_client.cpp  peer_client.h  wait_group.cpp  wait_group.h
src/hash/: hasher.h  murmurhash3.cpp  murmurhash3.h
src/io/: awaitable.h  buffer_pool.cpp  buffer_pool.h  io_uring_context.cpp  io_uring_context.h  stream_utils.h  task.h  tcp_connection.cpp  tcp_connection.h  tcp_listener.cpp  tcp_listener.h  udp_socket.cpp  udp_socket.h
src/membership/: disseminator.cpp  disseminator.h  member_list.cpp  member_list.h  node_info.h  ring_migration.cpp  ring_migration.h  ring_store.cpp  ring_store.h  swim_message.cpp  swim_message.h  swim_protocol.cpp  swim_protocol.h
src/protocol/: message.h
src/sdk/: benchmark.cpp  circuit_breaker.cpp  circuit_breaker.h  cli.cpp  connection_pool.cpp  connection_pool.h  pensieve_client.cpp  pensieve_client.h  topology_manager.cpp  topology_manager.h
src/storage/: clock_evictor.cpp  clock_evictor.h  local_store.cpp  local_store.h  slab_allocator.cpp  slab_allocator.h  slab_entry.h
tests/coordinator/: test_coordinator.cpp  test_protocol.cpp  test_wait_group.cpp
tests/hash/: test_hasher.cpp  test_murmurhash3.cpp  test_ring_lookup.cpp  test_virtual_nodes.cpp
tests/io/: test_buffer_pool.cpp  test_coroutine.cpp  test_e2e.cpp  test_io_uring_context.cpp  test_tcp_echo.cpp  test_udp_socket.cpp
tests/membership/: test_disseminator.cpp  test_member_list.cpp  test_node_info.cpp  test_ring_migration.cpp  test_ring_store.cpp  test_swim_e2e.cpp  test_swim_message.cpp  test_swim_protocol.cpp
tests/sdk/: test_circuit_breaker.cpp  test_sdk_e2e.cpp
tests/storage/: test_cache_line.cpp  test_clock_evictor.cpp  test_local_store.cpp  test_slab_allocator.cpp
